--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -79,6 +79,17 @@ jobs:
         token: ${{ secrets.ACCESS_TOKEN }}
         path: "ch_util"
 
+    - uses: actions/cache@v2
+      with:
+        path: ~/.cache/pip
+        key: ${{ runner.os }}-pip-${{ hashFiles('**/requirements.txt') }}
+        restore-keys: |
+          ${{ runner.os }}-pip-
+
+    - name: Install wheel
+      run: |
+        pip install wheel
+
     - name: Install chimedb
       run: |
         cd chimedb
