--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-bokeh
+bokeh==2.1.1
 caput @ git+https://github.com/radiocosmology/caput.git
 ch_util @ git+https://github.com/chime-experiment/ch_util.git
 click
