--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
 bokeh==2.1.1
 caput @ git+https://github.com/radiocosmology/caput.git
+chimedb @ https://github.com/chime-experiment/chimedb.git
+chimedb.dataflag @ https://github.com/chime-experiment/chimedb_dataflag.git
 ch_util @ git+https://github.com/chime-experiment/ch_util.git
 click
 datashader
