build(requirements): fix format of git lines

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 bokeh==2.2.1
 caput @ git+https://github.com/radiocosmology/caput.git
-chimedb @ https://github.com/chime-experiment/chimedb.git
-chimedb.dataflag @ https://github.com/chime-experiment/chimedb_dataflag.git
+chimedb @ git+https://github.com/chime-experiment/chimedb.git
+chimedb.dataflag @ git+https://github.com/chime-experiment/chimedb_dataflag.git
 ch_pipeline @ git+https://github.com/chime-experiment/ch_pipeline.git
 ch_util @ git+https://github.com/chime-experiment/ch_util.git
 click
