--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -97,9 +97,9 @@ jobs:
         restore-keys: |
           ${{ runner.os }}-pip-
 
-    - name: Install wheel
+    - name: Install wheel and future
       run: |
-        pip install wheel
+        pip install wheel future
 
     - name: Install python packages from private repos
       run: |
