--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -43,6 +43,7 @@ jobs:
 
     - name: Install apt dependencies
       run: |
+        sudo apt update
         sudo apt-get install -y libhdf5-serial-dev libopenmpi-dev libcfitsio-dev
 
     - name: Clone chimedb_config from private repo
